clusters/talos-cluster/webhook-router/namspace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webhook-router
  labels:
    name: webhook-router
