clusters/talos-cluster/webhook-router/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webhook-router-route
  namespace: webhook-router
  labels:
    app: webhook-router
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - "wr.horus.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: webhook-router-service
          port: 80
          weight: 100
